--- a/FLORES.html
+++ b/FLORES.html
@@ -307,7 +307,7 @@
         </div>
       </div>
     </div>
-    <audio autoplay>
+    <audio autoplay loop>
       <source src="img/Floricienta.mp3" type="audio/mp3">
     </audio>
     <script src="main.js"></script>
