--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <div class="greetings">
 
-        <span>H</span>
+        <span>F</span>
         <span>O</span>
-        <span>L</span>
+        <span>C</span>
+        <span>I</span>
+        <span>T</span>
         <span>A</span>
     </div>
     <div class="greetings">
@@ -25,11 +27,11 @@
         <span></span>
     </div>
     <div class="description">
-        <span>Tengo un regalo especial para ti!!</span>
+        <span>Tengo un regalo especial para ti</span>
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">Haga Clic</a>
+            <a href="FLORES.html">Clic aquí</a>
         </button>
         
     </div>
